samples/_failures_safe/1761691549_dee8e8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_732ae343.c: In function ‘main’:
./samples/SAFE/__tmp_732ae343.c:170: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_732ae343.c:169:9: error: expected declaration or statement at end of input
  169 |         switch
      |         ^~~~~~
./samples/SAFE/__tmp_732ae343.c:169:9: error: expected declaration or statement at end of input
